<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sky_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_effect" />

    <RelativeLayout
        android:id="@+id/toplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingEnd="@dimen/_30sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:src="@drawable/ic_credit_title" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_yellow" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/cjbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_girl_painting" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toplay"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:alpha="0.9"
        android:background="@drawable/ic_item_group_bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/_35sdp"
        android:paddingTop="@dimen/_35sdp"
        android:paddingEnd="@dimen/_35sdp"
        android:paddingBottom="@dimen/_35sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mtcorsva"
                    android:paddingTop="@dimen/_20sdp"
                    android:text="@string/credit1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/noteworthy"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mtcorsva"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mtcorsva"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/credit5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/aaaaa"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/aaaaa"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mtcorsva"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/credit51"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="italic|bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/aaaaa"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit61"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/aaaaa"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit71"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/aaaaa"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/credit9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mtcorsva"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit11"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txt_web"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/credit12"
                    android:textColor="@color/gnt_blue"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


</RelativeLayout>
